# dlsh

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: build-and-release.yml  release.yml  release_linux.yml  release_macos.yml
dlsh-zip/: CMakeLists.txt
gui/: CMakeLists.txt  dlsh.nsi
gui/src/: DGFile.hpp  DGTable.hpp  Fl_Console.hpp  TclEditor.h  dlsh.cpp  editor.cpp  linenoise-fltk.cxx  linenoise-fltk.h  tcl_interp.hpp
lib/: dgview.tcl  dlbasic.tcl  dlcompat.tcl  dlinput.tcl  dlmodules.tcl  dlsh.tcl  dlshrc  dlsort.tcl  dmbasic.tcl  events.tcl  fitfuncs.tcl  loadDlsh.tcl  pkgIndex.tcl  plot.tcl  regress.tcl  stats.tcl  tclIndex
lib/examples/: 226000a.raw  66007.raw  colorbars  colorbars.ps  colorramp  gauss.eps  img_samples.tcl  imgplace  imgshow  showsine  showsine_imsl  testimg.tcl  testimg.tcl~  testmovie.tcl
lib/examples/ipl/: 28087.raw  centertarga.tcl  monk4.raw  teddybear00.tga  testanimate.tcl  testipl.tcl  testroam.tcl  testtkimgraw.tcl  waldo_256.raw
lib/local/: console.tcl  img_show.tcl  lut.tcl  mahala.tcl  tclIndex
lib/local/anova/: #anova.tcl#  anova.tcl  pkgIndex.tcl
lib/local/corrgram/: corrgram.tcl  pkgIndex.tcl
lib/local/getopt/: foxGetOpt.README  foxTypedOpts.README  foxTypedOpts.tcl  getopt.n  typedopts.n
lib/local/graphing/: graphing.tcl  pkgIndex.tcl
lib/local/lfp/: #lfp.tcl#  #lfp_britt.tcl#  lfp.tcl  lfp_britt.bak  lfp_britt.old  lfp_britt.tcl  lfp_new.tcl  pkgIndex.tcl
lib/local/matlabUtils/: #matlabUtils.tcl#  #pkgIndex.tcl#  RMAOV1.m  RMAOV2.m  RMAOV33.m  matlabUtils.tcl  pkgIndex.tcl
lib/local/mtspec/: colormap.tcl  helpmtspec.tcl  mtspec.tcl  mtspecInit.tcl  pkgIndex.tcl  spectrogram.tcl
lib/local/phase/: #phaseUtils.tcl#  phaseUtils.tcl  pkgIndex.tcl
lib/local/rasts/: pkgIndex.tcl  rasts.tcl  rasts2.tcl
lib/local/robust/: pkgIndex.tcl  robust.tcl
lib/local/roc/: pkgIndex.tcl  roc.tcl
lib/local/selectivity/: pkgIndex.tcl  selectivity.tcl
lib/local/spec/: helpspec.tcl  pkgIndex.tcl  spec.tcl  specWindows.tcl  specinit.tcl
lib/local/spec/archive/: #coherency.tcl#  #helpspec.tcl#  #power.tcl#  #specWindows.tcl#  #sta_sfc.tcl#  coherency.tcl  helpspec.bak  power.tcl  readme.txt  sta_sfc.tcl
lib/local/spikes/: pkgIndex.tcl  spikes.tcl
lib/local/stimcompose/: compose-new.tcl  compose.tcl  pkgIndex.tcl
lib/local/xCorr/: pkgIndex.tcl  xCorr.tcl
libdg/: CMakeLists.txt
libdg/test/: CMakeLists.txt
libdg/test/src/: dgtojson.c
macos/: readme.txt  welcome.txt
pkgs/: CMakeLists.txt
pkgs/bink/: CMakeLists.txt  pkgIndex.tcl  tcl_bink.c
pkgs/bink/examples/: frametoPNG.tcl
pkgs/curve/: CMakeLists.txt  clipper_dl.cpp  clipper_svg.cpp  curve.c  curve.def  curve.h  curve.tcl  pkgIndex.tcl  tcl_curve.c  testclip.tcl
pkgs/dbscan/: CMakeLists.txt  dbscan.c  pkgIndex.tcl  testdbscan.tcl
pkgs/dslog/: CMakeLists.txt  pkgIndex.tcl  tcl_dslog.c
pkgs/dtw/: CMakeLists.txt  dtw.cpp  pkgIndex.tcl  testdtw.tcl
pkgs/flcgwin/: CMakeLists.txt  cg_tab_manager.cpp  cg_tab_manager.h  flcgwin.cpp  flcgwin.hpp  pkgIndex.tcl
pkgs/hex/: hex.tcl  pkgIndex.tcl  testhex.tcl
pkgs/impro/: CImg203.h  CMakeLists.txt  cimg_funcs.cpp  cimg_funcs.h  clahe.c  img.h  imgdraw.c  imgload.c  pkgIndex.tcl  targa.c  targa.h  tcl_impro.c  tgaload.h
pkgs/mdns/: CMakeLists.txt  mdns.h  mdns_query.c  mdns_query_response.h  pkgIndex.tcl  tcl_mdns.c
pkgs/points/: CMakeLists.txt  pkgIndex.tcl  points.c
pkgs/postgres/: CMakeLists.txt  pkgIndex.tcl
pkgs/postgres/src/: postgres.c
pkgs/postgres/test/: testpostgres.tcl
pkgs/qpcs/: client.tcl  dialogevtviewer.tcl  eventviewer.tcl  onlineviewer.tcl  pkgIndex.tcl  qpcs.tcl
pkgs/stimctrl/: CMakeLists.txt  sockapi.c  sockapi.h  stimctrl_w32.c  tclstimctrl.c
pkgs/tclbox2d/: CMakeLists.txt  hello_box2d.tcl  on_the_fly.tcl  pkgIndex.tcl  planks_box2d_tk.tcl  tclbox2d.c  tclbox2d.def  testbox2d.tcl
scripts/docker/: Dockerfile-build
src/: base_cg.c  cg_mswin.c  colorspace.c  dfana.c  dfana.h  dfevt.c  dgjson.c  dlAppInit.c  dlGLAppInit.c  dlXAppInit.c  dlarith.c  dlobj.c  dlobj.h  dlsh.def  dlsh64.exp  dlsh_pkg.c  dmana.c  labtcl.h  sigsetup.c  tcl_df.c  tcl_dl.c  tcl_dl.h  tcl_dlg.c  tcl_dm.c
src/lablib/: axes.c  cg_base.c  cg_ps.c  cgraph.c  cgraph.h  color.h  datapoint.h  dslog.c  dslog.h  gbuf.c  gbufutl.c  gbufutl.h  lablib.h  lablib64.def  prmutil.c  prmutil.h  randvars.c  rawapi.c  rawapi.h  timer.c  timer.h  utilc_unix.c
win/: Makefile  dlsh.def  dlsh64.exp  dlsh64.lib
