cmake_minimum_required(VERSION 3.15)

project(dlsh VERSION ${PROJECT_VERSION})

set(CMAKE_BUILD_TYPE Release)
if (WIN32)
    add_definitions(-DUSE_TCL_STUBS)
else()
    add_definitions(-fPIC -DUSE_TCL_STUBS)
endif()

if(WIN32)
    include_directories(src src/lablib c:/tcl/include c:/usr/local/include c:/usr/local/include/hpdf)
    link_directories(c:/usr/local/lib/$ENV{VSCMD_ARG_TGT_ARCH})
elseif(APPLE)
    add_definitions(-DMACOS -Dunix -DLINUX)
    include_directories(src src/lablib /usr/local/include)
    link_directories(/usr/local/lib)
elseif(CMAKE_SYSTEM_NAME STREQUAL "QNX")
    add_definitions(-DLINUX)
    include_directories(../local/include)
    link_directories(../local/aarch64/lib)
    set(TCLLIB tclstub)
    set(PDFLIB hpdf)
    set(LZ4LIB lz4)
    set(ZLIB z)
else()
    add_definitions(-DLINUX)
    include_directories(src src/lablib ${APP_DIR} /usr/local/include)
    link_directories(/usr/local/lib)
    set(LIBDL dl)
endif()

include_directories(${TCL_INCLUDE_DIR} src)

###############################
# dlsh
###############################
add_library(dlsh SHARED src/dfana.c src/tcl_dlg.c src/dfevt.c src/dlsh_pkg.c src/tcl_df.c src/tcl_dm.c src/dlarith.c src/dmana.c src/tcl_dl.c src/dgjson.c src/lablib/gbufutl.c src/lablib/gbuf.c src/lablib/cg_ps.c src/lablib/cg_base.c src/lablib/axes.c src/lablib/cgraph.c src/lablib/timer.c src/lablib/utilc_unix.c src/lablib/randvars.c src/lablib/prmutil.c src/lablib/dfutils.c src/lablib/df.c src/lablib/dynio.c src/lablib/rawapi.c src/lablib/lodepng.c src/lablib/lz4utils.c src/lablib/dslog.c )
set_target_properties(dlsh PROPERTIES PUBLIC_HEADER "src/dfana.h;src/lablib/df.h;src/lablib/dynio.h;src/tcl_dl.h;src/lablib/cgraph.h;src/lablib/gbuf.h;")

project(dlsh-static VERSION ${PROJECT_VERSION})

add_library(dlsh-static src/dfana.c src/tcl_dlg.c src/dfevt.c src/dlsh_pkg.c src/tcl_df.c src/tcl_dm.c src/dlarith.c src/dmana.c src/tcl_dl.c src/dgjson.c src/lablib/gbufutl.c src/lablib/gbuf.c src/lablib/cg_ps.c src/lablib/cg_base.c src/lablib/axes.c src/lablib/cgraph.c src/lablib/timer.c src/lablib/utilc_unix.c src/lablib/randvars.c src/lablib/prmutil.c src/lablib/dfutils.c src/lablib/df.c src/lablib/dynio.c src/lablib/rawapi.c src/lablib/lodepng.c src/lablib/lz4utils.c src/lablib/dslog.c )

if(WIN32)
    if(CMAKE_SIZEOF_VOID_P EQUAL 8)
        set(DEF_FILE ${CMAKE_CURRENT_SOURCE_DIR}/src/dlsh.def)
        set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /INCREMENTAL /LTCG /NODEFAULTLIB:libcmt /NODEFAULTLIB:MSCVRT /OUT:libdlsh.dll /DEF:${DEF_FILE} /IMPLIB:libdlsh.lib")
        set(TCLLIB tclstub.lib)
        set(ZLIB zlibstatic.lib)
        set(LZ4LIB liblz4_static.lib)
        set(PDFLIB hpdf.lib)
        set(LIBJANSSON jansson.lib)
    endif()
elseif(APPLE)
    set(TCLLIB tclstub)
    set(PDFLIB libhpdf.a)
    set(ZLIB z)
    find_library(LIBJANSSON NAMES "libjansson.a")
    find_library(LZ4LIB NAMES "liblz4.a")
    set(BUNDLE_LOAD "-dynamiclib")
    # set(CMAKE_EXE_MODULE_FLAGS "-arch arm64 -arch x86_64")
elseif(CMAKE_SYSTEM_NAME STREQUAL "QNX")
    set(LIBJANSSON jansson)
    set(LABLIB lab)
    set(TCLLIB tclstub)
    set(PDFLIB libhpdf.a)
    set(LZ4LIB lz4)
    set(ZLIB z)
else()
    find_library(LIBJANSSON NAMES "libjansson.a")
	set(LABLIB lab)
    set(TCLLIB tclstub)
    find_library(PDFLIB NAMES "libhpdf.a")
	set(LZ4LIB lz4)
    set(ZLIB z)
    set(PDFLIB hpdf)
endif()
target_link_libraries( dlsh ${LIBJANSSON} ${TCLLIB} ${PDFLIB} ${LZ4LIB} ${ZLIB} )

target_link_libraries( dlsh-static ${LIBJANSSON} ${TCLLIB} ${PDFLIB} ${LZ4LIB} ${ZLIB} )

install(TARGETS dlsh PUBLIC_HEADER)
install(TARGETS dlsh LIBRARY)
install(TARGETS dlsh-static LIBRARY)

set(CPACK_PACKAGE_NAME dlsh)
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Dynamic Lists and other TCL utilities.")
set(CPACK_PACKAGE_CONTACT SheinbergLab)
include(InstallRequiredSystemLibraries)

if(WIN32)
    # TODO
elseif(APPLE)
    # TODO
else()
    set(CPACK_PACKAGING_INSTALL_PREFIX "/usr/local")
    set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
endif()

include(CPack)
